--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -126,7 +126,6 @@ textarea,
 }
 
 .brn-chatbox__footer > .sg-horizontal-separator:first-child,
-span.pseudolink.user-more-data,
 canvas.game-box__dashed-progress-bar,
 #moderation-all .loader .throbber > img,
 #moderation-all .top .throbber > img,
